<?php

namespace App\Entity;

use App\Repository\ShareRepository;
use Doctrine\ORM\Mapping as ORM;
use Doctrine\Common\Collections\ArrayCollection;
use Doctrine\Common\Collections\Collection;

#[ORM\Entity(repositoryClass: ShareRepository::class)]
class Share
{
    #[ORM\Id]
    #[ORM\GeneratedValue]
    #[ORM\Column]
    private ?int $id = null;

    #[ORM\Column(length: 64, unique: true)]
    private ?string $token = null;

    #[ORM\Column(length: 255, nullable: true)]
    private ?string $email = null;

    #[ORM\Column(type: 'datetime_immutable')]
    private ?\DateTimeImmutable $createdAt = null;

    #[ORM\Column]
    private ?bool $isExternal = null;

    #[ORM\Column(length: 32)]
    private ?string $accessLevel = null;

    #[ORM\Column(type: 'datetime_immutable', nullable: true)]
    private ?\DateTimeImmutable $expiresAt = null;

    #[ORM\Column(length: 255, nullable: true)]
    private ?string $password = null;

    #[ORM\ManyToOne(targetEntity: File::class)]
    private ?File $file = null;

    #[ORM\ManyToOne(targetEntity: PrivateSpace::class)]
    private ?PrivateSpace $privateSpace = null;

    /**
     * @var Collection<int, AccessLog>
     */
    #[ORM\OneToMany(mappedBy: 'share', targetEntity: AccessLog::class, cascade: ['remove'], orphanRemoval: true)]
    private Collection $accessLogs;

    public function __construct()
    {
        $this->createdAt = new \DateTimeImmutable();
        $this->accessLogs = new ArrayCollection();
        $this->generateToken();
    }

    /**
     * Génère un token sécurisé (entropie forte) pour le partage.
     * @return $this
     */
    public function generateToken(): static
    {
        $this->token = bin2hex(random_bytes(32)); // 64 caractères hex, 256 bits d'entropie
        return $this;
    }

    /**
     * Définit le token de partage après validation d'entropie.
     * @throws \InvalidArgumentException
     */
    public function setToken(string $token): static
    {
        if (strlen($token) < 32 || !preg_match('/^[a-f0-9]{32,64}$/', $token)) {
            throw new \InvalidArgumentException('Le token doit comporter au moins 32 caractères hexadécimaux.');
        }
        $this->token = $token;
        return $this;
    }

    public function getEmail(): ?string
    {
        return $this->email;
    }

    public function setEmail(?string $email): static
    {
        $this->email = $email;
        return $this;
    }

    public function getCreatedAt(): ?\DateTimeImmutable
    {
        return $this->createdAt;
    }

    public function setCreatedAt(\DateTimeImmutable $createdAt): static
    {
        $this->createdAt = $createdAt;
        return $this;
    }

    public function isExternal(): ?bool
    {
        return $this->isExternal;
    }

    public function setIsExternal(bool $isExternal): static
    {
        $this->isExternal = $isExternal;
        return $this;
    }

    public function getAccessLevel(): ?string
    {
        return $this->accessLevel;
    }

    public function setAccessLevel(string $accessLevel): static
    {
        $this->accessLevel = $accessLevel;
        return $this;
    }

    public function getExpiresAt(): ?\DateTimeImmutable
    {
        return $this->expiresAt;
    }

    public function setExpiresAt(?\DateTimeImmutable $expiresAt): static
    {
        $this->expiresAt = $expiresAt;
        return $this;
    }

    public function getPassword(): ?string
    {
        return $this->password;
    }

    public function setPassword(?string $password): static
    {
        $this->password = $password;
        return $this;
    }

    public function getFile(): ?File
    {
        return $this->file;
    }

    public function setFile(?File $file): static
    {
        $this->file = $file;
        return $this;
    }

    public function getPrivateSpace(): ?PrivateSpace
    {
        return $this->privateSpace;
    }

    public function setPrivateSpace(?PrivateSpace $privateSpace): static
    {
        $this->privateSpace = $privateSpace;
        return $this;
    }

    /**
     * @return Collection<int, AccessLog>
     */
    public function getAccessLogs(): Collection
    {
        return $this->accessLogs;
    }

    public function addAccessLog(AccessLog $accessLog): static
    {
        if (!$this->accessLogs->contains($accessLog)) {
            $this->accessLogs->add($accessLog);
            $accessLog->setShare($this);
        }
        return $this;
    }

    public function removeAccessLog(AccessLog $accessLog): static
    {
        if ($this->accessLogs->removeElement($accessLog)) {
            if ($accessLog->getShare() === $this) {
                $accessLog->setShare(null);
            }
        }
        return $this;
    }
}
