@startuml HomeCloud

' Diagramme de classes principal pour Home Cloud (particuliers, partage)
' Synchronisé avec le code au 01/09/2025 — #24

class User {
  +id : int
  +username : string
  +email : string
  +password : string
  +createdAt : datetime
}

class PrivateSpace {
  +id : int
  +name : string
  +description : string
  +createdAt : datetime
}

class File {
  +id : int
  +filename : string
  +path : string
  +size : int
  +mimeType : string
  +createdAt : datetime
}

class Share {
  +id : int
  +token : string
  +email : string
  +createdAt : datetime
  +isExternal : bool
  +accessLevel : string
  +expiresAt : datetime
  +password : string
}

class AccessLog {
  +id : int
  +shareId : int
  +accessedAt : datetime
  +ipAddress : string
  +action : string
  +userId : int
}

' Suppression de Database (l'isolation se fait par base, pas par entité métier)

User "1" -- "1" PrivateSpace : propriétaire >
PrivateSpace "1" -- "1" User : < associé (bidirectionnel)
PrivateSpace "1" -- "*" File : contient >
File "1" -- "*" Share : partagé via >
PrivateSpace "1" -- "*" Share : partage global >
Share "*" -- "0..1" User : invité (optionnel)
Share "1" -- "*" AccessLog : journalise >

' NOTE: Chaque PrivateSpace est associé à un sous-domaine dédié (multi-tenant applicatif)
' L'isolation des données est assurée par la détection du sous-domaine côté Symfony
' Un User possède un PrivateSpace, chaque PrivateSpace correspond à un sous-domaine

@enduml
